<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBD1A2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/textView_BMICalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_black"
        android:text="@string/bmi_calculator"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView_MetricUnits"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#F79256"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/metric_units"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView_Height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/what_is_your_height"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_Height"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/textView_Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/what_is_your_weight"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_Weight"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#F44336"
        android:fontFamily="@font/poppins_bold"
        android:onClick="Calculate"
        android:text="@string/calculate"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView_BMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bmi_result"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_Result1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_Result2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#F44336"
        android:fontFamily="@font/poppins_bold"
        android:onClick="Clear"
        android:text="Clear"
        android:textSize="20sp" />

</LinearLayout>